test/corpus/model-defproperty.txt
==================
@model defproperty
==================

(module coin GOVERNANCE
    @model
    [ (defproperty conserves-mass
        (= (column-delta coin-table 'balance) 0.0))

      (defproperty valid-account (account:string)
        (and
          (>= (length account) 3)
          (<= (length account) 256)))
    ]
)

---
(source_file
  (module
    (module_identifier)
    (module_governance)
    (model
      (defproperty
        (def_identifier)
        (s_expression
          (s_expression_head
            (atom))
          (s_expression
            (s_expression_head
              (atom))
            (reference
              (atom))
            (symbol))
          (decimal)))
      (defproperty
        (def_identifier)
        (parameter_list
          (parameter
            (parameter_identifier)
            (type_annotation
              (type_identifier))))
        (s_expression
          (s_expression_head
            (atom))
          (s_expression
            (s_expression_head
              (atom))
            (s_expression
              (s_expression_head
                (atom))
              (reference
                (atom)))
            (integer))
          (s_expression
            (s_expression_head
              (atom))
            (s_expression
              (s_expression_head
                (atom))
              (reference
                (atom)))
            (integer)))))))
